<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_10dp"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_10dp"
            android:orientation="horizontal" >

            <Button
                android:layout_width="@dimen/layout_50dp"
                android:layout_height="@dimen/layout_25dp"
                android:layout_marginLeft="@dimen/layout_20dp"
                android:background="@drawable/time_button_bg"
                android:text="@string/one_day"
                android:textColor="@color/main_color"
                android:textSize="@dimen/textSize_11sp" />

            <Button
                android:layout_width="@dimen/layout_50dp"
                android:layout_height="@dimen/layout_25dp"
                android:layout_marginLeft="@dimen/layout_15dp"
                android:background="@drawable/time_button_bg_pressed"
                android:text="@string/one_hour"
                android:textColor="@color/text_color"
                android:textSize="@dimen/textSize_11sp" />

            <Button
                android:layout_width="@dimen/layout_50dp"
                android:layout_height="@dimen/layout_25dp"
                android:layout_marginLeft="@dimen/layout_15dp"
                android:background="@drawable/time_button_bg_pressed"
                android:text="@string/five"
                android:textColor="@color/text_color"
                android:textSize="@dimen/textSize_11sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_10dp"
            android:layout_marginTop="@dimen/layout_10dp" >

            <com.vomont.yundudao.view.timebar.TimeBackBar
                android:id="@+id/seerbar"
                android:layout_width="match_parent"
                android:layout_height="80dp" >
            </com.vomont.yundudao.view.timebar.TimeBackBar>

            <LinearLayout
                android:id="@+id/time_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/seerbar"
                android:orientation="horizontal" >
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>