<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_color"
    android:orientation="vertical" >

    <include layout="@layout/top_layout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_10dp"
        android:text="@string/setting_msg_tixing"
        android:textColor="@color/top_text_color"
        android:textSize="@dimen/textSize_16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_10dp"
        android:background="@drawable/linearlaytou_click"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_15dp"
            android:layout_marginLeft="@dimen/layout_20dp"
            android:layout_marginTop="@dimen/layout_15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/voice"
            android:textColor="@color/text_color"
            android:textSize="@dimen/textSize_16sp" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="@dimen/layout_20dp"
            android:background="@android:color/transparent"
            android:button="@drawable/toggle_btn"
            android:checked="false"
            android:text=""
            android:textOff=""
            android:textOn="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_10dp"
        android:background="@drawable/linearlaytou_click"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_15dp"
            android:layout_marginLeft="@dimen/layout_20dp"
            android:layout_marginTop="@dimen/layout_15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/shock"
            android:textColor="@color/text_color"
            android:textSize="@dimen/textSize_16sp" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="@dimen/layout_20dp"
            android:background="@android:color/transparent"
            android:button="@drawable/toggle_btn"
            android:checked="false"
            android:text=""
            android:textOff=""
            android:textOn="" />
    </LinearLayout>

</LinearLayout>